--- a/tex-for-print/071-150/071-150.tex
+++ b/tex-for-print/071-150/071-150.tex
@@ -1047,7 +1047,6 @@ saMgiVtavAdayxnaqtetxYrupacArASaTxkaM muneV |
 \ullekha{tave liMgapUjA japAdayxMga shudidhx mADuvude nibiVRjadiVkeSxyaderaDu te\char'273nalA kuvara sadayxsusx nivARNamumasadayxsusxnivARNaveMdu yugaLaM .....eraDaneyade niSAThxdiVkeSx saMcitAgAmigaLa biDisi tatApxrXrabadhxmaM BoVgadiM poVdudenisuta moVkaSxviVvudu (viVsheYpu. 6-97-62-63).}}
 \end{entry}
 
-%%%% 82
 \begin{entry}
 \word{asamAkaSxliMga}
 \src{va}
@@ -2523,24 +2522,23 @@ AcAraliMgaviVraH sAyxdAcAreYkaparAyaNaH ||
 \newmeaning{\ni{AcAraliMgaSaDaBxkatxH - AcAraliMgeVSu SaTusx BakatxH AcAra\-liMgaSaDaBxkatxH}}
 \end{entry}
 
-%% prathibha 96 page
 \begin{entry}
 \word{AcAraliMgasathxla}
 \meaning{\artha{Bakatxsathxlada upAsakanu pUjisuva\break liMgakekx saMbaMdhisida sathxla;
 iSaTxliMgada AcAraliMga matutx guruliMga eMba eraDu sathxlagaLalilx oMdu. Aru vidha\break
-liMgasathxlagaLalilx modalaneyadu. kirxyAshakitxyiMda \hbox{kUDida}\break elalx tatatxvXgaLanunx
+liMgasathxlagaLalilx modalaneyadu. kirxyAshakitxyiMda \hbox{kUDida}\break elalx tatatxvXgaLigU
 (mUvatAtxru tatatxvXgaLu) AsharxyavAgiruvudariMda AdhAraBUtavAda, citatxmAtarxdiMda
 gArxhayxvAda, nivaqtitxmAgaRdalilx niSeThxyuLaLx, kamaRtatatxvXvanunx veVdajacnxru
 AcAra\-liMgaveMdu karedidAdxre. iMtaha AcAraliMgakekx saMbaMdhisida sathxla. guruliMgasathxladalilxruva kirxyAshakitxya parxBAvadiMda I sathxlavu udayavAgutatxde.}}
 \smallskip
 \begin{shl}
-guruliMgaM tathA{\char'263\char'263}cAraliMgamituyxBayasathxlamf |\\[1pt]
+guruliMgaM tathA{\char'263}cAraliMgamituyxBayasathxlamf |\\[1pt]
 iSaTxliMgaM BavateyxVva satayxmukatxmidaM mayA ||\\[1pt]
-kamARtamxnA sakalatatatxvXnivAsaheVtoV{\char'263}dhAraBUtamacalakirxyayA 
+kamARtamxnA sakalatatatxvXnivAsaheVtoVrAdhAraBUtamacalakirxyayA 
 savxshakAtxyX |\\[1pt]
 citetxVna dhAyaRmadhirUDhanivaqtitxmAgaRM hAyxcAraliMgamiti 
 veVdavidoV vadaMti ||\\[1pt]
-guruliMgasathxleV tasimxnf kirxyAshakitx parxBAvataH ||\\[1pt]
+guruliMgasathxleV tasimxnf kirxyAshakitxparxBAvataH ||\\[1pt]
 AcAraliMgasaMjacnxM tu sathxlaM jAtaM sushoVdhanamf |
 \end{shl}
 \medskip
@@ -2561,7 +2559,7 @@ punasatxdeVva parxteyxVkaM tirxvidhaM tirxvidhaM Bavati ||
 \smallskip
 \begin{shl}
 Adw navasathxlAniVha BakatxsathxlasamAsharxyAtf |\\[1pt]
-diVkASxgurusathxlaM pUvaRM tataH shikASxgurusathxlamf |\\[1pt]
+diVkASxgurusathxlaM pUvaRM tataH shikASxgurusathxlamf ||\\[1pt]%%% prathibha96
 parxjAcnxgurusathxlaM cAtha kirxyAliMgasathxlaM tataH ||\\[1pt]
 BAvaliMgasathxlaM cAtha jAcnxnaliMgasathxlaM tataH |\\[1pt]
 savxyaM paraM caraM ceVti teVSAM lakaSxNamucayxteV ||
