--- a/tex-for-print/071-150/071-150.tex
+++ b/tex-for-print/071-150/071-150.tex
@@ -2559,7 +2559,7 @@ punasatxdeVva parxteyxVkaM tirxvidhaM tirxvidhaM Bavati ||
 \smallskip
 \begin{shl}
 Adw navasathxlAniVha BakatxsathxlasamAsharxyAtf |\\[1pt]
-diVkASxgurusathxlaM pUvaRM tataH shikASxgurusathxlamf ||\\[1pt]%%% prathibha96
+diVkASxgurusathxlaM pUvaRM tataH shikASxgurusathxlamf ||\\[1pt]
 parxjAcnxgurusathxlaM cAtha kirxyAliMgasathxlaM tataH ||\\[1pt]
 BAvaliMgasathxlaM cAtha jAcnxnaliMgasathxlaM tataH |\\[1pt]
 savxyaM paraM caraM ceVti teVSAM lakaSxNamucayxteV ||
@@ -2576,7 +2576,7 @@ savxyaM paraM caraM ceVti teVSAM lakaSxNamucayxteV ||
 %\end{shl}
 %\medskip
 %\pauthor{(si. shi., 15. 4-6)}
-\newmeaning{\ullekha{AcAraliMgasathxla tirxvidhaH sadAcAra, niyatAcAra, gaNAcAra (savasaM. 3; cenanxba. 966-308); AcAraliMgasathxla,\break guruliMgasathxla. I uBayasathxla niHsathxlavAgi, tAnoMdeV toVrutitxdiRtutx. (savasaM. 8; meVdara keVtayayx. 1408-478); shivaBakatxsharaNajanaMgaLa niVvelalx... diVkASxgurusathxla, shikASxgurusathxla, jAcnxnagurusathxla, kirxyAliMgasathxla, BAvaliMgasathxla, jAcnxnaliMgasathxla, savxyasathxla, carasathxla, parasathxla. (savasaM. 14; SaNumxKasAvxmi. 780-355).}}
+\newmeaning{\ullekha{AcAraliMgasathxla tirxvidhaH sadAcAra, niyatAcAra, gaNAcAra (savasaM. 3; cenanxba. 729-223); AcAraliMgasathxla,\break guruliMgasathxla. I uBayasathxla niHsathxlavAgi, tAnoMdeV toVrutitxdiRtutx. (savasaM. 8; meVdara keVtayayx. 1408-478); iVkASxgurusathxla, shikASxgurusathxla, jAcnxnagurusathxla, kirxyAliMgasathxla, BAvaliMgasathxla, jAcnxnaliMgasathxla, savxyasathxla, carasathxla, parasathxla. (savasaM. 14; SaNumxKasAvxmi. 780-355).}}
 \smallskip
 \newmeaning{\ni{AcAraliMgasathxlaM - AcAraliMgaM iti sathxlaM AcAra\-liMgasathxlaM}}
 \smallskip
@@ -2586,26 +2586,27 @@ savxyaM paraM caraM ceVti teVSAM lakaSxNamucayxteV ||
 \begin{entry}
 \word{AcAraliMgasathxlatirxvidha}
 \src{va}
-\meaning{\arthanonum{sadAcAra, niyatAcAra matutx gaNAcAra-eMba mUru AcAraliMgada BeVdagaLu:}
-  \ullekha{AcAra\-liMgasathxlatirxvidha sadAcAra niyatAcAra gaNAcAra elAlx janara\break keYyalU ahudenisikoMbudu sadAcAra [tAnu] hiDida\break varxtAcAravanu naDasUdu niyatAcAra shivaniMdeya keVLadipupxdu gaNAcAra (savasaM. 3; cenanxba. 729-223).}}
+\meaning{\arthanonum{sadAcAra, niyatAcAra matutx gaNAcAra eMba mUru AcAraliMgada BeVdagaLu:}
+  \ullekha{AcAra\-liMgasathxlatirxvidha: sadAcAra niyatAcAra gaNAcAra; elAlx janara\break keYyalU ahudenisikoMbudu sadAcAra; [tAnu] hiDida\break varxtAcAravanu naDasUdu niyatAcAra; shivaniMdeya keVLadipupxdu gaNAcAra (savasaM. 3; cenanxba. 729-223).}}
 \newmeaning{\ni{AcAraliMgasathxlatirxvidhaH - AcAraliMgasathxlaM ca asw tirxvidhashacx  AcAraliMgasathxlatirxvidhaH}}
 \end{entry}
 
 \begin{entry}
 \word{AcAraliMgAnuBAvi}
 \src{va}
-\meaning{\arthanonum{ililx `anuBAvi' eMba pada keVvala `suKi' eMba athaR koDutatxde. anuBAvi eMba padavanunx sUcAyxthaRdalilx baLasalAgide. \hbox{hiVge}\break noVDidAga, Bakatxnu (Bakatxsathxlada sAdhakanu) paqthivx tatatxvX\-vanunx AcAraliMgakekx apiRsi, adariMda gaMdhaveMba \hbox{parxsAdavanunx}\break sivxVkarisi suKiyAgutAtxne. (gaMdhavu paqthivx tatatxvXda muKayx\break guNa). matotxMdathaRdalilx, mUlAdhAradalilxruva AcAra\-liMgavanunx sAkASxtakxrisikoMDavaneV AcAraliMgAnuBAvi.}
-\ullekha{paqthivxya hiDidu AcAraliMgAnuBAviyAgi gaMdha parxsAdava\break kaMDu suKiyAdenayAyx (savasaM. 12; deVshikeVM- (1623-264).}}
+\meaning{\arthanonum{ililx `anuBAvi' eMba pada keVvala `suKi' eMba athaR koDutatxde. anuBAvi eMba padavanunx sUcAyxthaRdalilx baLasalAgide. \hbox{hiVge}\break noVDidAga, Bakatxnu (Bakatxsathxlada sAdhakanu) paqthivxVtatatxvX\-vanunx AcAraliMgakekx apiRsi, adariMda gaMdhaveMba \hbox{parxsAdavanunx}\break sivxVkarisi suKiyAgutAtxne. (gaMdhavu paqthivxVtatatxvXda muKayx\break guNa). matotxMdathaRdalilx, mUlAdhAradalilxruva AcAra\-liMgavanunx sAkASxtakxrisikoMDavaneV AcAraliMgAnuBAvi.}
+\ullekha{paqthivxya hiDidu AcAraliMgAnuBAviyAgi gaMdha parxsAdava\break kaMDu suKiyAdenayAyx. (savasaM. 12; deVshikeVM- (406-123).}}
 \newmeaning{\ni{AcAraliMgAnuBAviV - AcAraliMgasayx anuBAvaH asitx asimxnf iti  AcAraliMgAnuBAviV}}
 \end{entry}
 
 \begin{entry}
 \word{AcAravaMcaka}
-\meaning{\arthanonum{AcArakekx tapipx naDeyuvavaru. liMgeYkAyxkAMkiSx\-yAda shiSayxnige, guruvu AcAragaLanunx boVdhisuvudu. avanu liMgAMga sAmarasayx paDeyali eMba udedxVshadiMda. Adare kela shiSayxru I AcAragaLanunx, sAvxthaR (lwkika) udedxVshagaLigAgi mADutAtxre. aMthavaru AcAravaMcakaru.} \ullekha{samarasa\-vilalxde nerahi mADi, BakatxrAdeveMbavaraneVneMbe ? AcAra\-vaMcakara enage toVradiru kUDalasaMgamadeVvA, nimamx dhamaR (savasaM. 1; basava. 763-191).}}
-\newmeaning{\ni{AcAravaMcakaM - AcarANAM vaMcakaM  AcAravaMcakaM}}
+\src{va}
+\meaning{\arthanonum{AcArakekx tapipx naDeyuvavanu. liMgeYkAyxkAMkiSx\-yAda shiSayxnige, guruvu AcAragaLanunx boVdhisuvudu avanu liMgAMgasAmarasayx paDeyali eMba udedxVshadiMda. Adare kelavaru shiSayxru I AcAragaLanunx, sAvxthaR (lwkika) udedxVshagaLigAgi mADutAtxre. aMthavaru AcAravaMcakaru.} \ullekha{samarasa\-vilalxde nerahi mADi, BakatxrAdeveMbavaraneVneMbe? AcAra\-vaMcakara enage toVradiru kUDalasaMgamadeVvA, nimamx dhamaR! (savasaM. 1; basava. 763-191).}}
+\newmeaning{\ni{AcAravaMcakaH - AcArANAM vaMcakaH  AcAravaMcakaH}}
 \end{entry}
 
-\begin{entry}
+%% 96 page
 \word{AcAravarxta}
 \meaning{\arthanonum{Aru bageya varxtagaLalilx oMdu; jaMgamaveV liMga\-veMdu BAvisi, tamamx iSATxthaRgaLanunx apaRNe mADi, avara pAdatiVthaR parxsAdavanunx liMganiveVdana \hbox{mADuvudu:}}\break
 \ullekha{eMbatutxnAlukxlakaSx jiVvavarxta aivatAtxru neVmavarxta aruvatatx\-nAlukx shiVlavarxta, mUvatAtxru AcAravarxta (savasaM. 8; meremiM\-Dayayx. 1310-454); caraliMgaveV mahAliMgaveMdaMtavara caraNakekxyaKiLariSATxthaRvapiRsutavara pAdatiVthaR parxsAda\-liMgakekx neYveVdayxvAgiyAcaripudeV maMgalAcAravarxtaM (viVsheYpu. 7-113-15).}}
