--- a/tex-for-print/071-150/071-150.tex
+++ b/tex-for-print/071-150/071-150.tex
@@ -6710,15 +6710,16 @@ liVlayA saMgataH sAkASxdumApatiritiVritaH |
 \begin{entry}
 \word{UdhavxRdAvxra}
 \src{va}
-\meaning{\arthanonum{manuSayxna benunxhuriya oLa\-BAga\-dalilx cakarxgaLive eMba tAMtirxkara aBimatavanunx vacanakArarU opipxkoMDidAdxre. atayxMta keLaBAgadalilxruva (aMdare guda\-sAthxnadalilxruva) kuMDaliyanunx jAgaqtagoLisi adanunx benunxhuriyalilxruva cakarxgaLa mUlaka hAyudx hoVguvaMte mADi,\break konege taleyalilxruva sahasArxracakarxvanunx muTuTxvaMte mADa\-beVku. idu tAMtirxkara parxkAra, AdhAyxtimxka jiVvanada parama guri. adanenxV vacanakAraru hiVge heVLutAtxre : gudasAthxnadalilxruva mUlAdhAra cakarxdalilxruva AcAraliMgadalilx Bakatxnu aikayxvAgabeVku; inUnx meVlina cakarxgaLalilxruva guruliMga, parxsAdaliMga muMtAda liMgagaLanunx sAdhisi, koneyalilx Araneya mahAliMgavanUnx dATi, taleyalilxruva shUnayxliMgavanunx muTaTxbeVku. ideV AdhAyxtimxka jiVvanada parama guri. taleyalilxruva barxhamxraMdharxveV nijavAda (hAgU atuyxnanxta) UdhavxRdAvxra. (va.pa.koV. 94)} \ullekha{barxhamxraMdharxda UdhavxRdAvxraveMba nijadAvxramaM mADi, nivaRyalalilx nelegoLisi, basavapirxya kUDalacenanxsaMgana sharaNa parxBudeVvara baraviMge shUnayxsiMhAsanavaM racisi, barava hArutitxdadxnenanx paramaguru basavaNaNxnu (savasaM. 9; saMgameV. 269-90).}}
+\meaning{\arthanonum{manuSayxna benunxhuriya oLa\-BAga\-dalilx cakarxgaLive eMba tAMtirxkara aBimatavanunx vacanakArarU opipxkoMDidAdxre. atayxMta keLaBAgadalilxruva (aMdare guda\-sAthxnadalilxruva) kuMDaliyanunx jAgaqtagoLisi adanunx benunxhuriyalilxruva cakarxgaLa mUlaka hAyudx hoVguvaMte mADi,\break konege taleyalilxruva sahasArxracakarxvanunx muTuTxvaMte mADa\-beVku. idu tAMtirxkara parxkAra, AdhAyxtimxka jiVvanada parama guri. adanenxV vacanakAraru hiVge heVLutAtxre : gudasAthxnadalilxruva mUlAdhAra cakarxdalilxruva AcAraliMgadalilx Bakatxnu aikayxvAgabeVku; inUnx meVlina cakarxgaLalilxruva guruliMga, parxsAdaliMga muMtAda liMgagaLanunx sAdhisi, koneyalilx Araneya mahAliMgavanUnx dATi, shirasisxnalilxruva shUnayxliMgavanunx muTaTxbeVku. ideV AdhAyxtimxka jiVvanada parama guri. shirasisxnalilxruva barxhamxraMdharxveV nijavAda (hAgU atuyxnanxta) UdhavxRdAvxra. (va.pa.koV. 94)} \ullekha{barxhamxraMdharxda UdhavxRdAvxraveMba nijadAvxramaM mADi, nivaRyalalilx nelegoLisi, basavapirxya kUDalacenanxsaMgana sharaNa parxBudeVvara baraviMge shUnayxsiMhAsanavaM racisi, barava hArutitxdadxnenanx paramaguru basavaNaNxnu. (savasaM. 9; saMgameV. 269-85).}}
 \newmeaning{\ni{UdhavxRdAvxraM - UdhavxRM ca tatf dAvxraM ca UdhavxRdAvxraM}}
 \end{entry}
 
 \begin{entry}
 \word{UdhavxRpatha}
-\meaning{\arthanonum{benunxhuriya taLadalilx AdhAra\-cakarxvide. adara\-lilxruva AcAraliMgavanunx kuMDaliyu sututxvaridide. \hbox{yoVgada} mUlaka A kuMDaliyanunx jAgaqtagoLisi, meVlumxKavAgi sAgi sahasArxradalilxruva shUnayxliMgavanunx talupuva dAriyeV UdhavxRpatha. I pathadalilx sAvxdhi\-SAThxna, vishudidhx, maNipUraka, anAhata, AjAcnxcakarxgaLive. (va.pa.koV. 94-95)} \ullekha{suSumanx susarade UdhavxRpathavanarideveMdu raviya nAlageyanalana koneyalaMbikA sAthxnavAgi shashiyamaqtavanuMDu suKiyAdeneMbaru (savasaM. 7; caMdima. 683-228).}}
+\src{va}
+\meaning{\arthanonum{benunxhuriya taLadalilx AdhAra\-cakarxvide. adara\-lilxruva AcAraliMgavanunx kuMDaliyu sututxvaridide. \hbox{yoVgada} mUlaka A kuMDaliyanunx jAgaqtagoLisi, meVlumxKavAgi sAgi sahasArxradalilxruva shUnayxliMgavanunx talupuva dAriyeV UdhavxRpatha. I pathadalilx sAvxdhi\-SAThxna,  maNipUraka, vishudidhx, anAhata, AjAcnxcakarxgaLive. (va.pa.koV. 94-95)} \ullekha{suSumanx susarada UdhavxRpathavanarideveMdu raviya nAlageyanalana koneyalaMbikAsAthxnavAgi shashiyamaqtavanuMDu suKiyAdeneMbaru (savasaM. 7; caMdima. 675-219).}}
 \smallskip
-\newmeaning{\ni{UdhavxRpathaH - UdhavxRM paMthAH UdhavxRpathaH athavA pathaH UdhavxRM  UdhavxRpathaH}}
+\newmeaning{\ni{UdhavxRpathaH - UdhavxRH paMthAH UdhavxRpathaH athavA pathaH UdhavxRM  UdhavxRpathaH}}
 \end{entry}
 
 \begin{entry}
@@ -6726,14 +6727,14 @@ liVlayA saMgataH sAkASxdumApatiritiVritaH |
 \src{va}
 \meaning{\arthanonum{aMgasathxlagaLalilx oMdu; meVlumuKavAgi puMDarxdhAraNe mADuvudanunx niSeVdhisuva sathxla:}
 \expl{UdhavxRpuMDarxnirasanasathxla ....liMgaBakatxnAdeneMbavaMge shaMKacakArxdigaLAda AyudhagaLiMda oDalu muDuhaM suDisikoMbudu karxmavalelxMdu nuDida vacanaMgaLu (gaNaBA. 134-1).}}
-\newmeaning{\ni{UdhavxRpuMDarxnirasanasathxlaM - UdhavxRM ca tatf puMDarxM ca UdhavxRpuMDarxM, UdhavxRpuMDarxsayx nirasanaM  UdhavxRpuMDarxnirasanaM, UdhavxRpuMDarxnirasanaM iti sathxlaM UdhavxRpuMDarxnirasanasathxlaM}}
+\newmeaning{\ni{UdhavxRpuMDarxnirasanasathxlaM - UdhavxRM ca tatf puMDarxM ca UdhavxRpuMDarxM, UdhavxRpuMDarxsayx nirasanaM  UdhavxRpuMDarxnirasanaM, UdhavxRpuMDarx nirasanaM iti sathxlaM UdhavxRpuMDarx nirasanasathxlaM}}
 \end{entry}
 
 \begin{entry}
 \word{UdhavxRbiMdu}
 \src{va}
-\meaning{\arthanonum{UdhavxRbiMdu, madhayxbiMdu, sAthxvarabiMdu matutx BakitxbiMdu eMba catuviRdhabiMdugaLalilx oMdu:}
-\ullekha{UdhavxRbiMdu nAda muTaTxlike jaMgama madhayxbiMdu UdhavxRmuTaTxlike sAthxvara (savasaM. 3; cenanxba. 847-254).}}
+\meaning{\arthanonum{UdhavxRbiMdu, madhayxbiMdu, sAthxvarabiMdu matutx BakitxbiMdu eMba catuviRdha biMdugaLalilx oMdu:}
+\ullekha{UdhavxRbiMdu nAda muTaTxlike jaMgama madhayxbiMdu UdhavxR muTaTxlike sAthxvara sAthxvara biMdu sAthxvaravAda UdhavxR muTiTxlike Bakatx. Bavi(Bakatxra) biMdu nAda muTiTxlike Bavi. (savasaM. 3; cenanxba. 837-245).}}
 \newmeaning{\ni{UdhavxRbiMduH - biMdoVH UdhavxRM UdhavxRbiMduH}}
 \end{entry}
 
@@ -6743,21 +6744,21 @@ liVlayA saMgataH sAkASxdumApatiritiVritaH |
 \meaning{\arthanonum{parashivanalilx avinABAvadiMda beretiruva shakitx athavA mAyeyu saqSiTxya samayadalilx eraDu BAgavAgutatxde. aMgasathxlada jotegiruva shakitxge Bakitx athavA BakitxshakitxyeMdU, liMgasathxlada jotegiruva shakitxge shakitx athavA kalAshakitxyeMdU hesaru. aMganu tananx Bakitxshakitxya sahAyadiMda meVlakekx aMdare, parashivana kaDege hoVgalu sAdhayx\-vAgutatxde. AdudariMda Bakitxshakitxyanunx UdhavxRmAyA eMdu kareyalAgutatxde.}}
 \smallskip
 \begin{shl}
-sA shakitxdivxRdhA BUtA savxsAvxtaMtarxyXbaleVnatu |\\[1pt]
+sA shakitxdivxRvidhA BUtA savxsAvxtaMtarxyXbaleVna tu |\\[1pt]
 aMgasathxlAsharxyA kAcitf kAcidaMgasathxlAsharxyA |\\[1pt]
 liMgasathxlAsharxyA shakitxH kalArUpA parxkiVtiRtA ||\\[1pt]
 aMgasathxlAsharxyA shakitxBaRkitxrUpA BavApahA |
 \end{shl}
 \smallskip
 \newmeaning{\pauthor{(a.sU., 2. 22-23)}}
-\newmeaning{\ni{UdhavxRmAyAM - UdhavxRM ca asw mAyA ca UdhavxRmAyA}}
+\newmeaning{\ni{UdhavxRmAyA - UdhAAvxRM ca asw mAyA ca UdhavxRmAyA}}
 \end{entry}
 
 \begin{entry}
 \word{UdhavxRmuKa}
 \src{va}
 \meaning{\arthanonum{meVlumuKa; idanunx yoVgada saMcikeyalilx baLasidAdxre.}
-\ullekha{UdharxvXmuKavAgi kuLitidaR shishuvu girarxne tirugi talekeLagAgi katARrana kaMbecicxnalilx cinanxda salAke tegavaMte, bacacxlahuLuvinaMdadi yoVniyeMba sUkaSxmXdAvxradiMda poramaTuTx huTiTxdalilx (savasaM. 14; SaNumxKa. 262-127).}}
+\ullekha{UdhavxR muKada shivAlayadoLage mahAdeVvaru. A deVvara muMdaNa naMdiya noVTa vipariVta noVDa (savasaM. 7; GaTaTxnA. 433-149).}}
 \smallskip
 \newmeaning{\ni{UdhavxRmuKaM - UdhavxRM ca tatf muKaM ca UdhavxRmuKaM}}
 \end{entry}
@@ -6770,14 +6771,14 @@ aMgasathxlAsharxyA shakitxBaRkitxrUpA BavApahA |
 \begin{entry}
 \word{UdhavxRreVta shiva}
 \src{va}
-\meaning{\arthanonum{jagatatxnunx huTiTxsida shiva\-nanunx sAMkeVtikavAgi UdhavxRliMgaveMdU, saqSiTxge kAraNanAda avana shakitxyanunx sAMkeVtikavAgi reVtasf eMdU kareyalAgidudx, saqSiTxmADabeVkeMdu nidhaRrisida shivananunx sAMkeVtikavAgi UdhavxRreVta shiva eMdu kareyalAgutatxde.} \ullekha{AcAra goVcaravAgabeMkeMdu A nivaRyaveMba sAvxmi tAneyAgi, OMkAra UdhavxRreVta shivanAgi, beLananaTuTx basavaNaNx baMda kANA manave. (savasaM. 4; maDivA. 542-208).}}
+\meaning{\arthanonum{jagatatxnunx saqSiTxsisxda shiva\-nanunx sAMkeVtikavAgi UdhavxRliMgaveMdU, saqSiTxge kAraNanAda avana shakitxyanunx sAMkeVtikavAgi reVtasf eMdU kareyalAgidudx, saqSiTxmADabeVkeMdu nidhaRrisida shivananunx sAMkeVtikavAgi UdhavxRreVta shiva eMdu kareyalAgutatxde.} \ullekha{AcAra goVcaravAgabeVkeMdu A nivaRyaleMba sAvxmi tAneyAgi, OMkAra UdhavxRreVta shivanAgi, beLaganuTuTx basavaNaNx baMda kANA manave. (savasaM. 8; maDivA. 542-204).}}
 \newmeaning{\ni{UdhavxRreVtAH - UdhavxRM reVtaH asayx iti UdhavxRreVtAH}}
 \end{entry}
 
 \begin{entry}
 \word{UdhavxRliMga}
 \src{saM}
-\meaning{\arthanonum{aKaMDaliMga.}}
+\meaning{\arthanonum{= aKaMDaliMga.}}
 \smallskip
 \begin{shl}
 UdhAvxRya namaH | UdhavxRliMgAya namaH ||
@@ -6795,7 +6796,7 @@ tatorxVdhavxRliMgAya nama itayxKaMDaliMgamucayxteV |
 
 \begin{entry}
 \word{UdhavxRloVka}
-\meaning{\arthanonum{loVkagaLu oTuTx hadinAlukx idudx, avugaLalilx ELanunx UdhavxRloVkagaLeMdU, uLida ELanunx adhoV\-loVkagaLeMdU kareyalAgide. BUloVka, Buva\-loRVka, savxloRVka, mahaloRVka, janaloRVka, tapaloRVka, satayx\-loVka iveV UdhavxRloVkagaLu. iDiV vishavxveV manuSayxnalilx iruvudariMda avananunx piMDAMDavenanxlAgutatxde. I athaRdalilx avanalilxyeV hadinAlukx loVkagaLive. nABi, \hbox{kukiSx}, haqdaya, vakaSx, kaMTha, haNe, tale, ivu karxmavAgi meVle heVLida ELu UdhavxRloVkagaLa sAthxnagaLenisive.}}
+\meaning{\arthanonum{loVkagaLu oTuTx hadinAlukx idudx, avugaLalilx ELanunx UdhavxRloVkagaLeMdU, uLida ELanunx adhoV\-loVkagaLeMdU kareyalAgide. BUloVka, Buva\-loRVka, savxloRVka, mahaloRVka, janoVloVka, tapoVloVka, satayx\-loVka iveV UdhavxRloVkagaLu. iDiV vishavxveV manuSayxnalilx iruvudariMda avananunx piMDAMDavenanxlAgutatxde. I athaRdalilx avanalilxyeV hadinAlukx loVkagaLive. nABi, \hbox{kukiSx}, haqdaya, vakaSx, kaMTha, haNe, tale ivu karxmavAgi meVle heVLida ELu UdhavxRloVkagaLa sAthxnagaLenisive.}}
 \smallskip
 \newmeaning{\ni{UdhavxRloVkaH UdhavxRshacx asw loVkashacx - UdhavxRloVkaH}}
 \end{entry}
@@ -6803,8 +6804,8 @@ tatorxVdhavxRliMgAya nama itayxKaMDaliMgamucayxteV |
 \begin{entry}
 \word{UdhAvxRvasethx}
 \meaning{\arthanonum{ipapxtutxnAlukx avasethxgaLalilx oMdu:}
-\ullekha{shivatatatxvX aidu avAveMdaDe; shiva, shakitx, sAdAKayx, Ishavxra, shudadhx videyx- iMtu shiva\-tatatxvX aidu... perxVrakAvasethx oMdu, adhoVvasethx aidu, UdhAvxRvasethx aidu... (savasaM. 4; sidadhxrA. 374-203); avasAthx karxmavadeMtenalu padapiniM perxVrakAvasethxyeMdA madhayxmAdayxdhoVvasethxyeYdu odavidUdhAvxRvasethxyeYdalA ...nimaRladavasethx avu paMcakaMgaLipaRtatxnAlukxmavasethx (viVsheYpu. 6-97-21).}}
-\newmeaning{\ni{UdhAvxRvasAthx UdahvxRM avasAthxyAH - UdhAvxRvasAthx}}
+\ullekha{shivatatatxvX aidu avAveMdaDe; shiva, shakitx, sAdAKayx, Ishavxra, shudadhxvideyx - iMtu shiva\-tatatxvX aidu... perxVrakAvasethx oMdu, adhoVvasethx aidu, UdhAvxRvasethx aidu... (savasaM. 4; sidadhxrA. 1005-282); avasAthx karxmavadeMtenalu padapiniM perxVrakAvasethxyeMdA madhayxmAdayxdhoVvasethxyeYdu odavidUdhAvxRvasethxyeYdalA ...nimaRladavasethx. (viVsheYpu. 6-97-21).}}
+\newmeaning{\ni{UdhAvxRvasAthx UdhavxrA avasAthxyAH - UdhAvxRvasAthx}}
 \end{entry}
 
 
@@ -6814,6 +6815,12 @@ tatorxVdhavxRliMgAya nama itayxKaMDaliMgamucayxteV |
 %\ullekha{diVkiSxtanu yajanAthiRyAgi, BUshudidhxyaM mADi... yUpasatxMBavaM. parxtiSe*yaM mADi, QutivxjaraM kUDi... (savasaM. 13; mumamxDi. 1006-471).}}
 %\newmeaning{\ni{Qutivxkf Qutw yajati - iti Qutivxkf}}
 %\end{entry}
+
+\begin{center}
+{\bf {\LARGE e}}
+\end{center}
+
+%%% 143 page
 
 \begin{entry}
 \word{eMjalusUtaka}
